- fixed firefox android a11y issues - fixed sidebar focus button - fixed styled accordion content from being cut off - fixed overflowing code - fixed skip to content button on mobile - updated website in collaborators - updated browserslist

--- a/src/ace/components/accordion/examples/5.scss
+++ b/src/ace/components/accordion/examples/5.scss
@@ -55,7 +55,7 @@
 
 	[ace-accordion-panel-visible] {
 		@media (prefers-reduced-motion: no-preference) {
-			max-height: 245px;
+			max-height: 300px;
 			transition: max-height $trans-duration ease-in;
 			visibility: visible;
 		}
