--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -46,6 +46,7 @@ code {
 		font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
 		font-size: 1.4rem;
 		padding: 2px 4px;
+		word-break: break-all;
 	}
 }
 
