--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -51,8 +51,9 @@ $z-index: 2;
 	}
 
 	&__skip {
-		margin-right: $buffer-xs;
+		margin: 0 $buffer-xs;
 		padding: 4px;
+		text-align: center;
 		transform: translateY(-200%);
 
 		&:active,
